log

Tue 15 Aug 2023 08:13:52 PM UTC: 
 tests:  0|7
total_score: 0/70
96f4db7
Tue 15 Aug 2023 08:29:55 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
228e3c9
Tue 15 Aug 2023 08:45:31 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
d2a6bc8
Tue 15 Aug 2023 08:48:28 PM UTC: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 20/70
d324a08
Tue 15 Aug 2023 08:54:32 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:48:7: error: array size missing in ‘newArr’
   48 |   int newArr[];
      |       ^~~~~~
exercises.c:55:10: error: function returns address of local variable [-Werror=return-local-addr]
   55 |   return newArr;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
7da0a25
Tue 15 Aug 2023 08:54:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:55:10: error: function returns address of local variable [-Werror=return-local-addr]
   55 |   return newArr;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
58c16a9
Tue 15 Aug 2023 08:55:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:55:16: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   55 |   return newArr[(*newSize)];
      |          ~~~~~~^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
74bddc3
Tue 15 Aug 2023 08:57:52 PM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:48:7: error: array size missing in ‘newArr’
   48 |   int newArr[];
      |       ^~~~~~
exercises.c:56:10: error: function returns address of local variable [-Werror=return-local-addr]
   56 |   return newArr;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
8149b84
Tue 15 Aug 2023 08:58:48 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:48:16: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   48 |   int newArr = NULL;
      |                ^~~~
exercises.c:53:13: error: subscripted value is neither array nor pointer nor vector
   53 |       newArr[(*newSize)] = arr[i];
      |             ^
exercises.c:56:10: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   56 |   return newArr;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
e1b5e24
Tue 15 Aug 2023 08:58:57 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8104572
Tue 15 Aug 2023 09:01:20 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:56:10: error: function returns address of local variable [-Werror=return-local-addr]
   56 |   return newArr;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
b214ded
Tue 15 Aug 2023 09:02:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:56:16: error: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Werror=int-conversion]
   56 |   return newArr[*newSize];
      |          ~~~~~~^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
502201a
Tue 15 Aug 2023 09:03:51 PM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:57:10: error: function returns address of local variable [-Werror=return-local-addr]
   57 |   return newArr;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
a9a1bab
Tue 15 Aug 2023 09:05:50 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
83cb706
Tue 15 Aug 2023 09:07:06 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:54:15: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   54 |       *newArr = (int *) malloc(sizeof(int) * *newSize);
      |               ^
exercises.c:58:10: error: ‘newArr’ is used uninitialized [-Werror=uninitialized]
   58 |   return newArr;
      |          ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
57c5173
Tue 15 Aug 2023 09:10:17 PM UTC: 
 exercises.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 20/70
c8a9ab2
Tue 15 Aug 2023 09:12:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
234d8ce
Tue 15 Aug 2023 09:13:56 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 30/70
eb788c8
Tue 15 Aug 2023 09:14:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
362c9f7
Tue 15 Aug 2023 09:47:24 PM UTC: 
 exercises.c | 13 ++++---------
 1 file changed, 4 insertions(+), 9 deletions(-)
 tests:  0|5
total_score: 20/70
36bf73d
Tue 15 Aug 2023 09:47:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
98c3d91
Wed 16 Aug 2023 12:46:28 AM UTC: 
 exercises.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
88593fd
Wed 16 Aug 2023 12:47:58 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
d754bdb
Wed 16 Aug 2023 12:49:49 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
fd8e15f
Wed 16 Aug 2023 12:51:42 AM UTC: 
 exercises.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  0|3
total_score: 40/70
ac12bd5
Wed 16 Aug 2023 01:04:12 AM UTC: 
 exercises.c | 41 ++++++++++++++++++++++-------------------
 1 file changed, 22 insertions(+), 19 deletions(-)
 tests:  0|3
total_score: 40/70
7e1f2dc
Wed 16 Aug 2023 01:08:00 AM UTC: 
 exercises.c | 14 +++-----------
 1 file changed, 3 insertions(+), 11 deletions(-)
 tests:  0|4
total_score: 30/70
3fc5c06
Wed 16 Aug 2023 01:20:38 AM UTC: 
 exercises.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  0|3
total_score: 40/70
9dd23ce
Wed 16 Aug 2023 01:33:31 AM UTC: 
 exercises.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
819db7c
Wed 16 Aug 2023 01:35:10 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
7592442
Wed 16 Aug 2023 01:36:14 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
cc2522c
Wed 16 Aug 2023 01:37:33 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
351f40d
Wed 16 Aug 2023 01:37:47 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
d9ccd3e
Wed 16 Aug 2023 01:38:39 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
198908b
Wed 16 Aug 2023 01:40:15 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
b33849d
Wed 16 Aug 2023 01:42:28 AM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|3
total_score: 40/70
90c0986
Wed 16 Aug 2023 01:42:53 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
b705abf
Wed 16 Aug 2023 01:45:31 AM UTC: 
 exercises.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  0|3
total_score: 40/70
8014ac2
Wed 16 Aug 2023 01:47:57 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
0a38bc9
Wed 16 Aug 2023 01:52:06 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
d553c17
Wed 16 Aug 2023 01:53:17 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|2
total_score: 50/70
ae09792
Wed 16 Aug 2023 01:54:26 AM UTC: 
 exercises.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
 tests:  0|2
total_score: 50/70
3431029
